# bayesianFilter

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: extendedkalmanfilter.h  gaussian.h  kalman.h  motionmodel.h
src/: CMakeLists.txt  extendedkalmanfilter.h  gaussian.cpp  kalman.cpp  main.cpp  motionmodel.cpp
test/: CMakeLists.txt  motionmodel_calculatemotion.cpp  test_motionmodel.cpp  tests_motionmodel.cpp
